<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <Button
            android:id="@+id/bt_cancel"
            android:backgroundTint="@null"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cancel"
            android:layout_gravity="left"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_alert"
            android:textSize="20dp"
            android:textColor="@color/bgBottomNavigation"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/bt_save"
            android:backgroundTint="@null"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_save"
            android:layout_gravity="right"
            />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/rl_battery_alert"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            style="?android:attr/listSeparatorTextViewStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_battery_alert"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_battery_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingRight="10dp"
                android:textSize="16dp"
                android:text="95%"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <SeekBar
            android:id="@+id/seek_battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_battery_alert"
            android:max="100"
            android:paddingVertical="5dp"
            style="?android:attr/listSeparatorTextViewStyle"/>

        <RelativeLayout
            android:id="@+id/rl_time_alert"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rl_battery_alert"
            style="?android:attr/listSeparatorTextViewStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_time_alert"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_time_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingRight="10dp"
                android:textSize="16dp"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <TimePicker
            android:id="@+id/tp_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_time_alert"
            android:layout_centerHorizontal="true"
            android:timePickerMode="spinner" />

        <RelativeLayout
            android:id="@+id/rl_temperature_alert"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rl_time_alert"
            style="?android:attr/listSeparatorTextViewStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_temperature_alert"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_temperature_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingRight="10dp"
                android:textSize="16dp"
                android:text="30°C"
                android:textAlignment="textEnd" />

        </RelativeLayout>

        <SeekBar
            android:id="@+id/seek_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_temperature_alert"
            android:max="100"
            android:paddingVertical="5dp"
            style="?android:attr/listSeparatorTextViewStyle"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>

